--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -48,6 +48,12 @@ a {
   font-weight: 400; /* opzionale, stesso peso del testo normale */
 }
 
+.message {
+  font-family: 'Montserrat', sans-serif; /* stesso font degli altri testi */
+  font-size: 16px;
+  line-height: 1.5;
+}
+
 
 /* ---------- NAVBAR ---------- */
 .navbar {
@@ -202,6 +208,7 @@ a {
   color: white;
   font-weight: 600;
   transition: color 0.3s ease;
+  text-align: center;
 }
 
 .navbar-links-mobile a:hover {
